security.tf
resource "aws_security_group" "web_sg" {
  name		= "bellzytech-web-sg"
  description	= "Allow SSH and HTTP access"
  vpc_id	= aws_vpc.custom_vpc.id

  ingress {
    description		= "Allow SSH"
    from_port 		= 22
    to_port		= 22
    protocol		= "tcp"
    cidr_blocks		= ["0.0.0.0/0"]
  }

  ingress {
    description		= "Allow HTTP"
    from_port		= 80
    to_port		= 80
    protocol		= "tcp"
    cidr_blocks         = ["0.0.0.0/0"]
  }

  egress {
    description		= "Allow all outbound traffic"
    from_port		= 0
    to_port		= 0
    protocol		= "-1"
    cidr_blocks         = ["0.0.0.0/0"]
  }

  tags = {
    Name = "bellzytech-web-sg"
  }
}
